--- a/myapp/src/components/AddMovie.css
+++ b/myapp/src/components/AddMovie.css
@@ -1,7 +1,7 @@
 .contact-form{
     text-align: center;
     padding: 15px;
-    background-color: #271033;
+    background-color: palevioletred;
 }
 
 .contact-form .input_text{
