--- a/myapp/src/components/MovieList.css
+++ b/myapp/src/components/MovieList.css
@@ -5,7 +5,7 @@
     align-items: center;
   }
   .List-container {
-    background-color: #353b48;
+    background-color: gray;
     height: auto;
   }
   .add-Movie {
