--- a/myapp/src/components/Filter.css
+++ b/myapp/src/components/Filter.css
@@ -16,7 +16,7 @@
     top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, 0.6);
+    background: pink;
     max-width: 800px;
     width: 100%;
     border-radius: 5px;
