--- a/myapp/src/components/MovieCard.css
+++ b/myapp/src/components/MovieCard.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 300px;
     height: 300px;
-    background: #000;
+    background:pink;
     overflow: hidden;
     box-shadow: 0 5px 10px rgba(0,0,0,0.3);
     cursor: pointer;
